# CS_576_Final_Project

./: .gitignore  CMakeLists.txt  README.md
src/: MyDecoder.cpp  MyEncoder.cpp  test.cpp
